# simple-faucet-contract

./: .gitignore  Cargo.toml  README.md  build_docker.sh  build_local.sh
res/: simple_faucet_contract.wasm
src/: lib.rs
